# ROHSA-GPU

./: .cproject  .cproject_template  .gitignore  .project_template  CMakeCache.txt  CMakeLists.txt  EXEC  GHIGLS_DFN_Tb.fits  Gaussian.cpp  Gaussian.h  Makefile  Parse.cpp  Parse.h  README.md  READ_ME.txt  ROHSA-GPU  Reshape_data.cpp  Reshape_data.h  Tool.cpp  Tool.h  algo_rohsa.cpp  algo_rohsa.h  cmake_install.cmake  default_data.tar.xz  hypercube.cpp  hypercube.h  install_CCfits.sh  install_L-BFGS-B.sh  install_matplotlib.sh  install_packages_data_and_CCfits.sh  main.cpp  model.cpp  model.h  parameters.txt  run_first.sh  swap  toto
L-BFGS-B-C/src/: x.lbfgsb_77_1  x.lbfgsb_77_2  x.lbfgsb_77_3
Release/: ROHSA-GPU  main.d  makefile  objects.mk  subdir.mk
documentation/html/: _compiling.html  _formulas.tex  algo__rohsa_8cpp_source.html  algo__rohsa_8hpp.html  algo__rohsa_8hpp__dep__incl.map  algo__rohsa_8hpp__dep__incl.md5  algo__rohsa_8hpp__incl.map  algo__rohsa_8hpp__incl.md5  algo__rohsa_8hpp_source.html  animation_8cpp_source.html  annotated.html  annotated_dup.js  bar_8cpp_source.html  basic_8cpp_source.html  classalgo__rohsa-members.html  classalgo__rohsa.html  classalgo__rohsa.js  classalgo__rohsa_a5716e6c2a3f0c133409ae1e8daf52193_icgraph.md5  classalgo__rohsa_a91e1f979d2d06d95b4a1ce27eb729c54_cgraph.map  classalgo__rohsa_a91e1f979d2d06d95b4a1ce27eb729c54_cgraph.md5  classalgo__rohsa_ac38d6954e64c3b309e03390aa4d9d554_icgraph.map  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_cgraph.map  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_cgraph.md5  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_icgraph.map  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_icgraph.md5  classes.html  classhypercube-members.html  classhypercube.html  classhypercube.js  classmatplotlibcpp_1_1_plot-members.html  classmatplotlibcpp_1_1_plot.html  classparameters-members.html  classparameters.html  classparameters.js  compile__mex_8m_source.html  convolutions_8cu_source.html  dir_000009_000003.html  dir_1b63c3510868810187872114951955fe.html  dir_1b63c3510868810187872114951955fe.js  dir_26b0e35cc0793e02b56707bf47de1647.html  (+137 more)
documentation/latex/: _compiling.tex  algo__rohsa_8hpp.tex  algo__rohsa_8hpp__dep__incl.md5  algo__rohsa_8hpp__incl.md5  annotated.tex  classalgo__rohsa.tex  classalgo__rohsa_a91e1f979d2d06d95b4a1ce27eb729c54_cgraph.md5  classalgo__rohsa_ac38d6954e64c3b309e03390aa4d9d554_icgraph.md5  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_cgraph.md5  classalgo__rohsa_aef915659d10fb3ebbde1e7462000c9b0_icgraph.md5  classhypercube.tex  classmatplotlibcpp_1_1_plot.tex  classparameters.tex  f__g__cube__gpu_8cu.tex  f__g__cube__gpu_8cu__incl.md5  files.tex  index.tex  main_8cpp.tex  refman.tex  (+27 more)
html/: _formulas.tex  algo__rohsa_8hpp_source.html  annotated.html  classalgo__rohsa-members.html  classalgo__rohsa.html  classes.html  classhypercube-members.html  classhypercube.html  classmatplotlibcpp_1_1_plot-members.html  classmatplotlibcpp_1_1_plot.html  classparameters-members.html  classparameters.html  dir_1b63c3510868810187872114951955fe.html  dir_26b0e35cc0793e02b56707bf47de1647.html  dir_302612e2aae9eb0ec33d70ca3f4d8fa7.html  dir_472fafaf0f039b9e6b043966c1ef7dbf.html  dir_68663f55b1aa114c0ce33ee7a53f8c32.html  dir_6c2c869208840dd06e7f0442efad554f.html  dir_7d4710898990d585865cf5144bd0963f.html  dir_baee4e06063f154909fa09f56f1e5848.html  dir_bfccd401955b95cf8c75461437045ac0.html  f__g__cube__gpu_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  gradient_8hpp_source.html  hierarchy.html  hypercube_8hpp_source.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_25.map  inherit_graph_25.md5  inherit_graph_4.map  inherit_graph_6.map  inherits.html  (+51 more)
inc/: FlatArray.hpp  FlatArray.hpp.save  algo_rohsa.hpp  callback_cpu.h  convolutions.hpp  f_g_cube.hpp  f_g_cube_gpu.hpp  f_g_cube_gpu_save.txt  f_g_cube_norm.hpp  f_g_cube_vecto.hpp  fortran_to_cpp_conversion.h  gradient.cu  gradient.hpp  gradient_norm.hpp  hypercube.hpp  model.hpp  parameters.hpp
latex/: algo__rohsa_8hpp_source.tex  annotated.tex  classalgo__rohsa.tex  classhypercube.tex  classmatplotlibcpp_1_1_plot.tex  classparameters.tex  f__g__cube__gpu_8hpp_source.tex  gradient_8hpp_source.tex  hierarchy.tex  hypercube_8hpp_source.tex  lbfgsb_8h_source.tex  matplotlibcpp_8h_source.tex  md__l-_b_f_g_s-_b-_c__r_e_a_d_m_e.tex  md_matplotlib-cpp__r_e_a_d_m_e.tex  parameters_8hpp_source.tex  refman.tex  structmatplotlibcpp_1_1detail_1_1__interpreter.tex  structmatplotlibcpp_1_1detail_1_1is__callable.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl_3_01false_00_01_t_01_4.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl_3_01true_00_01_t_01_4.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl_3_01true_00_01_t_01_4_1_1_check.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl_3_01true_00_01_t_01_4_1_1_derived.tex  structmatplotlibcpp_1_1detail_1_1is__callable__impl_3_01true_00_01_t_01_4_1_1_fallback.tex  structmatplotlibcpp_1_1detail_1_1plot__impl.tex  structmatplotlibcpp_1_1detail_1_1plot__impl_3_01std_1_1false__type_01_4.tex  structmatplotlibcpp_1_1detail_1_1plot__impl_3_01std_1_1true__type_01_4.tex  structmatplotlibcpp_1_1select__npy__type.tex  structmatplotlibcpp_1_1select__npy__type_3_01bool_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01double_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01float_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01int16__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01int32__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01int64__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01int8__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01uint16__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01uint32__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01uint64__t_01_4.tex  structmatplotlibcpp_1_1select__npy__type_3_01uint8__t_01_4.tex
(+108 files in other folders)
